...
                        )
                )
                if (expanded) {
                    Text(
                        text = ("Composem ipsum color sit lazy, " +
                                "padding theme elit, sed do bouncy. ").repeat(4),
                        modifier = Modifier.testTag("expanded_text")
                    )
                }
            }
            IconButton(
                onClick = { expanded = !expanded },
                modifier = Modifier.testTag("expand_button")
            ) {
                Icon(
                    imageVector =
                        if (expanded) {
                            Icons.Filled.ExpandLess
                        } else {
...
